[metadata]
name = pylibdsa
version = 0.4.0
author = Aravind Potluri
author_email = aravindswami135@gmail.com
description = A python based library for Data Structures and Algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url= https://github.com/cipherswami/pylibdsa
license = MIT
keywords = Data Structures, Algorithms
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
exclude = tests
packages = find:
install_requires =
    numpy

[options.packages.find]
where = src

[mypy]
python_requires >= 3.6